--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
+    "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "ioredis": "^5.8.2"
   }
 }
